llvm/test/fail/14addarr.dna
def main
   var a b is int[10]
   writeInteger: a+b
   writeString: "\nThis program is wrong!\n"
